--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -37,3 +37,6 @@ CONFIG_ZMK_SPLIT=y
 
 # ## https://docs.zephyrproject.org/2.7.5/reference/kconfig/CONFIG_PM_DEVICE.html
 # CONFIG_PM_DEVICE=y
+
+## https://zmk.dev/docs/features/studio
+CONFIG_ZMK_STUDIO=y
